# passer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.web  README.md  TODO.md  flake.nix  package-lock.json  package.json  wasm
.github/workflows/: check.yml
server/: .envrc  Cargo.toml  Dockerfile  build.sh
server/res/test/store/: file1dNzbGlJSjJ6dUFBYlJVLXFfUmRzMVRTSEJEMHpwM3ppaEtON21Hcw  file2ddLczRYTWR5T3FzdWUtUnR3a1RNbE9HTVBzRHZRSEliNzhFNUlOaw  oldfile1bGlJSjJ6dUFBYlJVLXFfUmRzMVRTSEJEMHpwM3ppaEtON21Hcw
server/res/test/store/scan/: badheaderTc2QkF1RE84Yi1sc2Z0NVNIMlZEV1N0VmJoa0JXU1BGQ1UtSQ  file_1____________________________________0  file_2____________________________________0
server/src/: handler.rs  main.rs  middleware.rs  options.rs  router.rs  store.rs
server/src/server/: error.rs  handler.rs  middleware.rs  mod.rs
server/src/store/: in_file.rs  in_memory.rs  mod.rs
src/: App.tsx  Footer.scss  Glyph.css  Glyph.tsx  index.scss  index.tsx  lib.rs
wasm/: .envrc
wasm/src/: lib.rs
web/: .dockerignore  .envrc  .gitignore  Dockerfile  build.sh  config-overrides.js  package-lock.json  package.json
web/cfg/: Config.bundle.ts  Config.standalone.ts
web/public/: index.html  manifest.json
web/src/: Alert.css  Alert.tsx  App.css  App.scss  App.tsx  Config.ts  Footer.scss  Footer.tsx  Glyph.css  Glyph.tsx  HowItWorks.css  HowItWorks.tsx  ImageButton.scss  ImageButton.tsx  Loading.css  Loading.tsx  Pack.css  Pack.tsx  Util.ts  Worker.tsx  index.scss  index.tsx
web/src/decrypt/: Components.tsx  Decrypt.css  Decrypt.tsx  DecryptQuick.tsx  DecryptSingle.tsx  DecryptStepped.tsx  Pack.ts
web/src/encrypt/: Encrypt.css  Encrypt.tsx  Pack.ts  Result.css  Result.tsx
web/wasm/: .gitignore  Cargo.toml
web/wasm/passer/src/: lib.rs
web/wasm/src/: lib.rs
