[package]
name = "passer"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.6"
base64 = "0.12"
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] }
