[package]
name = "passer"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.6"
base64 = "0.12"
bincode = "1"
console_error_panic_hook = "0.1"
js-sys = "0.3"
miniz_oxide = "0.4"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
