[package]
name = "passer"
version = "0.1.1"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13"
clap = "3.0.0-beta.4"
colored = "2"
gotham = "0.6"
gotham_derive = "0.6"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
simplelog = "0.10"
thiserror = "1"
tokio = "1"

[dev-dependencies]
mime = "0.3"
