[package]
name = "passer"
version = "0.7.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.21.4"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
gotham = "0.7.2"
gotham_derive = "0.7.1"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
simplelog = "0.12.1"
thiserror = "1.0.49"
time = { version = "0.3.30", default-features = false }
tokio = "1.33.0"

[dev-dependencies]
mime = "0.3.17"
