[package]
name = "passer"
version = "0.7.1"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.4.6", features = ["derive"] }
colored = "3.0.0"
gotham = "0.7.2"
gotham_derive = "0.7.1"
log = "0.4.20"
rand = "0.9.2"
serde = { version = "1.0.189", features = ["derive"] }
simplelog = "0.12.1"
thiserror = "2.0.17"
time = { version = "0.3.30", default-features = false }
tokio = "1.33.0"

[dev-dependencies]
mime = "0.3.17"
