[package]
name = "passer"
version = "0.7.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm-siv = "0.11.1"
base64 = "0.22"
bincode = { version = "2.0.1", features = ["serde"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
miniz_oxide = "0.8.9"
serde = { version = "1.0.189", features = ["derive"] }
wasm-bindgen = "0.2.87"

[target.wasm32.dependencies]
getrandom = "0.3.4"
