[package]
name = "passer"
version = "0.7.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm-siv = "0.11.1"
base64 = "0.22"
bincode = { version = "2.0.1", features = ["serde"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.82"
miniz_oxide = "0.8.9"
serde = { version = "1.0.189", features = ["derive"] }
wasm-bindgen = "0.2.105"

[target.wasm32.dependencies]
# Must match what aes-gcm-siv brings in
getrandom = { version = "0.2.16", features = ["js"] }
